--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <!-- Modal 1 -->
   <div id="modal1" class="modal hidden">
     <div class="modal-card gold">
-      <h2>شارك واربح 1000$</h2>
+      <h2> دولار شارك واربح 1000$</h2>
       <p>أدخل اسمك ورقم هاتفك للمشاركة.</p>
       <form id="signupForm">
         <label>الاسم
@@ -120,7 +120,9 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <!-- Modal 2 -->
   <div id="modal2" class="modal hidden">
     <div class="modal-card green">
-      <h2>لزيادة فرص ربحك</h2>
+        <h2>تهانينا!</h2>
+      <p class="big">لقد تم قبولك للمشاركة في السحب على جائزة
+      <h2>لزيادة فرص ربحك  </h2>
       <p>شارك الموقع مع أصدقائك!</p>
       <div class="modal-actions">
         <button id="shareBtn" class="btn accent">مشاركة</button>
