--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>تجربة توعوية: جوائز واحتيال | SafeDemo</title>
+  <title>شارك واربح | SafeD</title>
   <meta name="description" content="محاكاة توعوية لموقع 'شارك واربح' لشرح خطر الضغط على روابط مشبوهة وكيف تتجنب الوقوع في الفخ." />
 
   <!-- ====== CSS مدموج ====== -->
@@ -93,7 +93,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
     </section>
 
     <footer class="site-footer">
-      <small>مشروع توعوي — SafeLinks</small>
+    <!--<small>مشروع توعوي — SafeLinks</small>-->
     </footer>
   </main>
 
@@ -146,7 +146,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <div id="modal3" class="modal hidden">
     <div class="modal-card red">
       <h2>تنبيه أمني</h2>
-      <p class="big">لقد تم اختراق هاتفك وسحب جميع البيانات!</p>
+      <p class="big">لقد تم اختراق هاتفك وسحب جميع البيانات! لتفادي الأمر اضغط على حسنا</p>
       <div class="modal-actions">
         <button id="toAwareness" class="btn danger">حسناً</button>
       </div>
