--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   --radius:14px;
   --glass: rgba(255,255,255,0.85);
   --accent:#0f1720;
+  --highlight:#f8fafc;
+  --link:#0b61ff;
 }
 *{box-sizing:border-box}
 body{
@@ -30,6 +32,7 @@ body{
 .page{min-height:100vh;display:flex;flex-direction:column;align-items:stretch}
 .site-header{padding:18px;background:linear-gradient(90deg,#fffefb,#fff7e6);border-bottom:1px solid rgba(15,23,42,0.03)}
 .brand h1{margin:0;font-size:20px;color:#0b1220}
+.brand .welcome{font-size:13px;color:#4b5563;margin-top:6px}
 
 .hero{padding:40px 18px;text-align:center}
 .hero h2{margin:0 0 8px;font-size:22px}
@@ -50,7 +53,24 @@ body{
 /* ---- modal ---- */
 .modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;padding:18px;z-index:9999}
 .modal.hidden{display:none}
-.modal-card{width:100%;max-width:520px;border-radius:12px;padding:18px;background:rgba(255,255,255,0.98);box-shadow:0 26px 60px rgba(2,6,23,0.12)}
+.modal-card{
+  width:100%;
+  max-width:520px;
+  border-radius:12px;
+  padding:18px;
+  background:rgba(255,255,255,0.98);
+  box-shadow:0 26px 60px rgba(2,6,23,0.12);
+  /* new: scroll + fade-in */
+  max-height: 80vh;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  animation: fade 260ms ease;
+}
+@keyframes fade{
+  from{opacity:0; transform:scale(.97);}
+  to{opacity:1; transform:scale(1);}
+}
+
 .modal-actions{margin-top:12px;display:flex;gap:8px;justify-content:flex-end}
 
 .modal-card.red{border:1px solid rgba(197,48,48,0.06)}
@@ -66,21 +86,33 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
 .progress-rect{width:100%;height:16px;border-radius:8px;background:#fff2d6;border:1px solid rgba(15,23,42,0.04);overflow:hidden}
 .progress-rect .fill{height:100%;width:0%;background:linear-gradient(90deg,#f59e0b,#f97316);transition:width .18s}
 
-/* explosion */
+/* explosion + shake */
 .explode {
   animation: explodeAnim 400ms ease forwards;
 }
 @keyframes explodeAnim{
   0%{transform:scale(1);opacity:1}
+  40%{transform:scale(1.02) rotate(-2deg)}
   100%{transform:scale(1.6) rotate(8deg);opacity:0}
 }
+.shake {
+  animation: shakeAnim 340ms linear;
+}
+@keyframes shakeAnim {
+  0% { transform: translateX(0) }
+  20% { transform: translateX(-6px) }
+  40% { transform: translateX(6px) }
+  60% { transform: translateX(-4px) }
+  80% { transform: translateX(4px) }
+  100% { transform: translateX(0) }
+}
 
-/* الدليل التوعوي داخل المودال */
+/* guide styles */
 #guide {
   display: none;
   margin-top: 12px;
   padding: 12px;
-  background:#fbfbff;
+  background:var(--highlight);
   border-radius:8px;
   border:1px solid rgba(2,6,23,0.04);
   color: #0b1220;
@@ -90,6 +122,21 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
 #guide h3{margin:0 0 8px;font-size:16px}
 #guide ol{padding-left:18px;margin:8px 0}
 #guide pre{background:#f3f4f6;padding:8px;border-radius:6px;overflow:auto;font-size:13px}
+.guide-note{background:#fff;padding:8px;border-radius:6px;margin:8px 0;border-left:4px solid var(--gold2)}
+
+/* useful links */
+.useful{margin-top:10px}
+.useful a{display:inline-block;margin:6px 8px 6px 0;color:var(--link);text-decoration:none;font-weight:600}
+
+/* copy button small */
+.copy-row{display:flex;gap:8px;align-items:center;margin-top:8px}
+.copy-row input{flex:1;padding:8px;border-radius:6px;border:1px solid rgba(15,23,42,0.06);background:#fff}
+
+/* responsive */
+@media (max-width:560px){
+  .modal-card{padding:12px}
+  .hero{padding:22px 12px}
+}
   </style>
 </head>
 
@@ -98,13 +145,16 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
     <header class="site-header">
       <div class="brand">
         <h1>WinPrize — شارك واربح</h1>
+        <!--        <div id="persistentWelcome" class="welcome" aria-live="polite"></div>
+-->
       </div>
     </header>
 
     <section class="hero">
       <h2>أدخل عالم الجوائز فرصة ربح تقدر 500$دولار </h2>
       <div class="hero-actions">
-        <button id="startBtn" class="cta primary">ابدأ التجربة</button>
+        <button id="startBtn" class="cta primary">ابدأ و جرب حظك</button>
+        <button id="sharePageBtn" class="btn ghost" title="انسخ رابط الصفحة">اضغط هنا لنسخ الرابط </button>
       </div>
     </section>
 
@@ -114,7 +164,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   </main>
 
   <!-- Modal 1 -->
-  <div id="modal1" class="modal hidden">
+  <div id="modal1" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card gold">
       <h2> شارك وأربح 500$ دولار</h2>
       <p>أدخل اسمك ورقم هاتفك للمشاركة.</p>
@@ -134,11 +184,11 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   </div>
 
   <!-- Modal 2 -->
-  <div id="modal2" class="modal hidden">
+  <div id="modal2" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card green">
       <h2>تهانينا!</h2>
       <!-- هنا ستُعرض عبارة التهنئة مع اسم المستخدم -->
-      <p id="welcomeMsg" class="big"></p>
+      <p id="welcomeMsg" class="big" aria-live="polite"></p>
 
       <h2>لزيادة فرص ربحك</h2>
       <p>شارك الموقع مع أصدقائك!</p>
@@ -150,18 +200,23 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   </div>
 
   <!-- Progress -->
-  <div id="progressModal" class="modal hidden">
-    <div class="modal-card danger">
-      <h2>جاري المشاركة...</h2>
-      <div class="progress-rect">
-        <div class="fill" id="shareFill"></div>
+  <div id="progressModal" class="modal hidden" role="status" aria-hidden="true">
+    <div class="modal-card danger" id="progressCard">
+      <h2 id="progressTitle">جاري المشاركة...</h2>
+      <div style="display:flex;gap:12px;align-items:center;flex-direction:column">
+        <div style="width:100%;">
+          <div class="progress-rect">
+            <div class="fill" id="shareFill"></div>
+          </div>
+        </div>
+        <div id="countdown" style="font-weight:700;color:var(--muted);font-size:14px">3</div>
       </div>
       <p class="muted">الرجاء الانتظار...</p>
     </div>
   </div>
 
   <!-- Modal 3 -->
-  <div id="modal3" class="modal hidden">
+  <div id="modal3" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card red">
       <h2>تنبيه أمني</h2>
       <p class="big">لقد تم اختراق هاتفك وسحب جميع البيانات! لتفادي الأمر اضغط على إلغاء</p>
@@ -172,7 +227,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   </div>
 
   <!-- Modal 4 -->
-  <div id="modal4" class="modal hidden">
+  <div id="modal4" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card info">
       <h2>رسالة توعوية</h2>
       <p>هذه محاكاة توعوية لتوضيح مخاطر الروابط المشبوهة.</p>
@@ -188,22 +243,36 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
         <h3>دليل سريع للتحقق من الروابط المشبوهة (خطوة بخطوة)</h3>
         <ol>
           <li><strong>لا تنقر مباشرة:</strong> إن وصلتك رسالة برابط غير متوقع — لا تضغط عليه أولاً.</li>
-          <li><strong>افحص الظاهر قبل النقر:</strong> مرر الفأرة فوق الرابط (أو اضغط مطوّلًا على الهاتف) لترى العنوان الحقيقي. هل يطابق النص؟ هل يحتوي على أحرف مكررة أو أخطاء هجائية؟</li>
+          <li><strong>افحص الظاهر قبل النقر:</strong> مرر الفأرة فوق الرابط (أو اضغط مطوّلًا على الهاتف) لترى العنوان الحقيقي. هل يطابق النص؟ هل يحتوي على أخطاء هجائية؟</li>
           <li><strong>انسخ الرابط:</strong> انسخ الرابط بالكامل (Copy link). على الحاسوب كليك يمين → Copy link، وعلى الهاتف اضغط مطوّلاً → نسخ الرابط.</li>
           <li><strong>استخدم موقع VirusTotal:</strong>
-            <p>افتح <code>https://www.virustotal.com</code> → اختَر تبويب <em>URL</em> → ألصق الرابط → اضغط <em>Search / Scan</em>.</p>
+            <p>افتح <a href="https://www.virustotal.com" target="_blank" rel="noopener">https://www.virustotal.com</a> → اختَر تبويب <em>URL</em> → ألصق الرابط → اضغط <em>Search / Scan</em>.</p>
             <p>سيقوم VirusTotal بإرسال الرابط إلى عدة محركات فحص (مثل: Google Safe Browsing, Kaspersky, ESET ...).</p>
           </li>
           <li><strong>كيفية قراءة النتيجة:</strong>
             <ul>
               <li>إذا ظهرت نتيجة مثل <code>0/70</code> → لا يوجد كشف لدى محركات الفحص، لكن هذا لا يعني أمانًا مطلقًا — كن حذرًا دائماً.</li>
-              <li>إذا ظهرت نتيجة مثل <code>5/70</code> أو أكثر → هذا مؤشر قوي أن الرابط قد يكون ضارًا، تجنبه فورًا.</li>
+              <li>إذا ظهرت نتيجة مثل <code>5/70</code> أو أكثر → مؤشر قوي أن الرابط قد يكون ضارًا، تجنبه فورًا.</li>
               <li>راجع تفاصيل محركات الفحص: بعضها قد يعطي إنذارًا كـ <em>phishing</em> أو <em>malicious</em> مع سبب أو تعليق.</li>
             </ul>
           </li>
           <li><strong>تحقّق من معلومات إضافية:</strong> انظر تاريخ النطاق، صفحة Whois، وهل يستخدم HTTPS صحيح أم لا، وهل اسم النطاق مطابق للمصدر المتوقع.</li>
           <li><strong>الأمان الأفضل:</strong> حتى لو كانت نتيجة الفحص صفرية، لا تدخل بيانات حساسة إلا بعد التأكد من مصدر موثوق.</li>
         </ol>
+
+        <div class="guide-note"><strong>تجربة عملية:</strong> يمكنك نسخ الرابط التجريبي التالي ولصقه في VirusTotal لتجربة كيفية عمل الفحص دون تعريض بيانات حقيقية:</div>
+
+        <div class="copy-row" aria-hidden="false">
+          <input id="exampleLink" readonly value="https://example-malicious.fake/login-check" />
+          <button id="copyExample" class="btn">نسخ الرابط للتجربة</button>
+        </div>
+
+        <h3>روابط مفيدة</h3>
+        <div class="useful">
+          <a href="https://www.virustotal.com" target="_blank" rel="noopener">VirusTotal (فحص روابط وملفات)</a>
+          <a href="https://urlscan.io" target="_blank" rel="noopener">URLScan (تفحص الصفحة وتصويرها)</a>
+          <a href="https://whois.domaintools.com" target="_blank" rel="noopener">Whois / Domain Info</a>
+        </div>
 
         <h3>ملاحظات عملية</h3>
         <ul>
@@ -217,8 +286,10 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
       </div>
 
       <div class="modal-actions">
-        <!-- الزر الجديد: عند الضغط يظهر الدليل ثم يتغير ليعيدك للصفحة -->
-        <button id="showGuideBtn" class="btn primary">اطلع على دليل التحقق</button>
+        <!-- زر عرض الدليل -->
+        <button id="showGuideBtn" class="btn">اطلع على دليل التحقق</button>
+        <!-- زر المشاركة (يفتح قائمة المشاركة أو ينسخ النص) -->
+        <button id="shareAwareness" class="btn primary">مشاركة</button>
       </div>
     </div>
   </div>
@@ -227,32 +298,53 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <script>
 document.addEventListener("DOMContentLoaded", () => {
 
+  // عناصر DOM
   const startBtn = document.getElementById('startBtn');
   const signupForm = document.getElementById('signupForm');
   const shareBtn = document.getElementById('shareBtn');
   const toAwareness = document.getElementById('toAwareness');
   const showGuideBtn = document.getElementById('showGuideBtn');
+  const shareAwareness = document.getElementById('shareAwareness');
   const shareFill = document.getElementById('shareFill');
   const welcomeMsg = document.getElementById('welcomeMsg');
   const guide = document.getElementById('guide');
+  const copyExample = document.getElementById('copyExample');
+  const exampleLink = document.getElementById('exampleLink');
+  const progressCard = document.getElementById('progressCard');
+  const countdownEl = document.getElementById('countdown');
+  const sharePageBtn = document.getElementById('sharePageBtn');
 
-  // جعل الاسم يمنع الأرقام لحظيًا
+  // عناصر الإدخال
   const nameInput = document.getElementById("nameInput");
+  const phoneInput = document.getElementById("phoneInput");
+
+  // عند تحميل الصفحة: محاولة عرض تحية مخزنة (إن وجد العنصر)
+  const savedName = localStorage.getItem('safedemo_name');
+  const persistentWelcome = document.getElementById('persistentWelcome');
+
+  if (savedName && savedName.trim().length > 0 && persistentWelcome) {
+    persistentWelcome.textContent =
+      `مرحبًا ${savedName} — شكرًا لمشاركتك في حملة التوعية!`;
+  }
+
+  // منع أرقام داخل الاسم لحظيًا
   nameInput.addEventListener("input", () => {
     nameInput.value = nameInput.value.replace(/[0-9]/g, "");
   });
 
-  // جعل رقم الهاتف يقبل الأرقام فقط لحظيًا
-  const phoneInput = document.getElementById("phoneInput");
+  // السماح بأرقام فقط في الهاتف لحظيًا
   phoneInput.addEventListener("input", () => {
     phoneInput.value = phoneInput.value.replace(/[^0-9]/g, "");
   });
 
   function showModal(id){
     document.getElementById(id).classList.remove('hidden');
+    document.getElementById(id).setAttribute('aria-hidden','false');
   }
+
   function hideModal(id){
     document.getElementById(id).classList.add('hidden');
+    document.getElementById(id).setAttribute('aria-hidden','true');
   }
 
   startBtn.onclick = () => showModal('modal1');
@@ -263,20 +355,24 @@ document.addEventListener("DOMContentLoaded", () => {
     const name = nameInput.value.trim();
     const phone = phoneInput.value.trim();
 
-    // فحص الاسم: يمنع الأرقام ويقبل نص عربي أو إنجليزي
     if (!/^[A-Za-z\u0600-\u06FF ]+$/.test(name)) {
       alert("الرجاء إدخال اسم صحيح بدون أرقام.");
       return;
     }
 
-    // فحص الهاتف: أرقام فقط
     if (!/^[0-9]+$/.test(phone)) {
       alert("الرجاء إدخال رقم هاتف صحيح (أرقام فقط).");
       return;
     }
 
-    // عرض رسالة التهنئة بالاسم
-    welcomeMsg.textContent = `تهانينا ${name}! لقد تم قبولك للمشاركة في السحب على الجائزة.`;
+    try {
+      localStorage.setItem('safedemo_name', name);
+    } catch (err) {
+      console.warn('localStorage not available', err);
+    }
+
+    welcomeMsg.textContent =
+      `تهانينا ${name}! لقد تم قبولك للمشاركة في السحب على الجائزة.`;
 
     hideModal('modal1');
     showModal('modal2');
@@ -287,51 +383,130 @@ document.addEventListener("DOMContentLoaded", () => {
     showModal('progressModal');
 
     shareFill.style.width = '0%';
-    let start = null, duration = 2000;
+    countdownEl.textContent = '3';
+    let start = null, duration = 2000, countdown = 3;
+
+    const countdownInterval = setInterval(()=>{
+      countdown--;
+      if (countdown >= 0) countdownEl.textContent = countdown;
+      if (countdown < 0) clearInterval(countdownInterval);
+    }, 1000);
 
     function anim(ts){
       if(!start) start = ts;
+
       let pct = Math.min(100, ((ts - start)/duration)*100);
       shareFill.style.width = pct + '%';
 
       if(pct < 100){
         requestAnimationFrame(anim);
       } else {
-        document.querySelector('.progress-rect').classList.add('explode');
+        progressCard.classList.add('shake');
+
+        const rect = document.querySelector('.progress-rect');
+        rect.classList.add('explode');
+
         setTimeout(()=>{
+          progressCard.classList.remove('shake');
+          rect.classList.remove('explode');
           hideModal('progressModal');
           showModal('modal3');
-        }, 450);
+          countdownEl.textContent = '3';
+        }, 700);
       }
     }
+
     requestAnimationFrame(anim);
   };
 
   toAwareness.onclick = () => {
     hideModal('modal3');
     showModal('modal4');
+
+    const card = document.querySelector('#modal4 .modal-card');
+    if (card) card.scrollTop = 0;
   };
 
-  // سلوك الزر الجديد داخل مودال التوعية:
-  // - عند الضغط أول مرة: إظهار الدليل التوعوي وتغيير نص الزر إلى "أعدني للصفحة"
-  // - عند الضغط ثانية: إغلاق المودال وإعادة تهيئة الحقول
+  // زر عرض/إخفاء الدليل
   showGuideBtn.onclick = () => {
     if (guide.style.display === 'block') {
-      // إذا كان الدليل ظاهرًا: إعدني للصفحة (أغلق المودال وامسح الحقول)
+
       hideModal('modal4');
-      // reset form fields
       nameInput.value = '';
       phoneInput.value = '';
       welcomeMsg.textContent = '';
       guide.style.display = 'none';
+      guide.setAttribute('aria-hidden','true');
       showGuideBtn.textContent = 'اطلع على دليل التحقق';
+
     } else {
-      // إظهار الدليل داخل المودال
+
       guide.style.display = 'block';
       guide.setAttribute('aria-hidden','false');
-      showGuideBtn.textContent = 'أعدني للصفحة';
-      // لو أردت تمرير المودال لأسفل ليظهر الدليل، نفقِد التركيز قليلاً
-      // (لا حاجة لتغيير أي شيء مرئي كبير)
+      showGuideBtn.textContent = 'أغلق الدليل';
+
+      const card = document.querySelector('#modal4 .modal-card');
+      if (card) {
+        setTimeout(()=>{
+          card.scrollTo({ top: guide.offsetTop - 12, behavior: 'smooth' });
+        }, 120);
+      }
+    }
+  };
+
+  copyExample.onclick = async () => {
+    try {
+      await navigator.clipboard.writeText(exampleLink.value);
+      copyExample.textContent = 'تم النسخ ✓';
+      setTimeout(()=> copyExample.textContent = 'نسخ الرابط للتجربة', 1700);
+    } catch (err) {
+      exampleLink.select();
+      document.execCommand('copy');
+      copyExample.textContent = 'تم النسخ ✓';
+      setTimeout(()=> copyExample.textContent = 'نسخ الرابط للتجربة', 1700);
+    }
+  };
+
+  sharePageBtn.onclick = async () => {
+    const pageUrl = location.href.split('?')[0];
+
+    try {
+      await navigator.clipboard.writeText(pageUrl);
+      sharePageBtn.textContent = 'رابط الصفحة نُسخ!';
+      setTimeout(()=> sharePageBtn.textContent = 'مشاركة الوعي', 1800);
+    } catch (err) {
+      alert('نسخ الرابط غير متاح في المتصفح.');
+    }
+  };
+
+  // زر المشاركة التي تحاكي سلوك المحتال (لكن للتوعية)
+  shareAwareness.onclick = async () => {
+    const shareText =
+      "🔥 فرصة ربح 500$ مجانًا!\n" +
+      "⏳ ادخل السحب الآن قبل انتهاء الوقت!\n" +
+      "👇 جرّب حظك من هنا:\n" +
+      window.location.href.split('?')[0];
+
+    if (navigator.share) {
+      try {
+        await navigator.share({
+          title: "فرصة ربح 500$",
+          text: shareText,
+          url: window.location.href.split('?')[0],
+        });
+      } catch (err) {
+        console.warn("تم إلغاء المشاركة", err);
+      }
+    } else {
+      try {
+        await navigator.clipboard.writeText(shareText);
+        shareAwareness.textContent = "تم النسخ ✓";
+        setTimeout(() => {
+          shareAwareness.textContent = "مشاركة";
+        }, 1800);
+      } catch (err) {
+        alert("المتصفح لا يدعم المشاركة أو النسخ التلقائي.");
+      }
     }
   };
 
