update share button and guide

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ document.addEventListener("DOMContentLoaded", () => {
     if (navigator.share) {
       try {
         await navigator.share({
-          title: "فرصة ربح 500$",
+          title: "فرصة ربح 250 ريال سعودي$",
           text: shareText,
           url: window.location.href.split('?')[0],
         });
