update share button and guide

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <!-- Modal 3 -->
   <div id="modal3" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card red">
-      <h2>تنبيه أمني</h2>
-      <p class="big">لقد تم اختراقك وسحب جميع البيانات! لتفادي الأمر اضغط على إلغاء</p>
+      <h2> تنبيه أمني</h2>
+      <p class="big">لقد تم اختراقك او تسريب وسحب جميع البيانات! لتفادي الأمر اضغط على إلغاء</p>
       <div class="modal-actions">
         <button id="toAwareness" class="btn danger">إلغاء</button>
       </div>
@@ -235,6 +235,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
         <li>تحقق من الرابط قبل النقر.</li>
         <li>لا تنشر روابط مجهولة للآخرين.</li>
         <li>    لاتصدق كل ماينشر عبر المواقع من مسابقات وجوائز , عبر هذه الروابط يقع الكثير في الفخاخ والتصيد الأحتيالي ويتم استخدام بياناتك الشخصية للمجهول لسرقتها وربما بيعها  .</li>
+        <li>     الان شارك الموقع لتوعية اكثر عدد من المستخدمين.</li>
       </ul>
       <p class="final">فكرة وإعداد الطالب: احمد الجعدي الصبيحي.</p>
 
