update share button and guide

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ document.addEventListener("DOMContentLoaded", () => {
   // زر المشاركة النهائية - يستخدم Web Share API عند الإمكان
   shareAwareness.onclick = async () => {
     const shareText =
-      "🔥 فرصة ربح 500$ مجانًا!\n" +
+      "🔥 فرصة ربح 250 ريال سعودي مجانًا!\n" +
       "⏳ ادخل السحب الآن قبل انتهاء الوقت!\n" +
       "👇 جرّب حظك من هنا:\n" +
       window.location.href.split('?')[0];
