update share button and guide

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <!-- Modal 3 -->
   <div id="modal3" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card red">
-      <h2>  تنبيه أمني</h2>
+      <h2>  تنبيه أمني! أختراااااق</h2>
      <!--<p class="big">لقد تم اختراقك او تسريب وسحب جميع البيانات! لتفادي الأمر اضغط على إلغاء</p>--> 
      <p class="big">يحاول الموقع في الخلفبة الوصول إلى بيانات حساسة مثل الصور وجهات الاتصال لديك! اضغط على إلغاء فورًاp>
       <div class="modal-actions">
