update share button and guide

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <div id="modal3" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card red">
       <h2>  تنبيه أمني! أختراااااق</h2>
-     <!--<p class="big">لقد تم اختراقك او تسريب وسحب جميع البيانات! لتفادي الأمر اضغط على إلغاء</p>--> 
-     <p class="big">يحاول الموقع في الخلفبة الوصول إلى بيانات حساسة مثل الصور وواتساب وجهات الاتصال لديك! اضغط على إلغاء فورًاp>
+     <p class="big"> يحاول الموقع في الخلفبة الوصول إلى بيانات حساسة مثل الصور وواتساب وجهات الاتصال لديك! اضغط على إلغاء فور</p> 
+     <p class="big"> هذا الموقع مزيف ويهدف إلى توعيتك حول مخاطر الروابط المشبوهة.</p>
       <div class="modal-actions">
         <button id="toAwareness" class="btn danger">إلغاء</button>
       </div>
