--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <!-- Modal 2 -->
   <div id="modal2" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card green">
-      <h2>تهانينا!</h2>
+      <h2> الف الف الف مبرووووووووك تهانينا!</h2>
       <!-- هنا ستُعرض عبارة التهنئة مع اسم المستخدم -->
       <p id="welcomeMsg" class="big" aria-live="polite"></p>
 
@@ -227,8 +227,9 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <div id="modal3" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card red">
       <h2>  تنبيه أمني! أختراااااق</h2>
-     <p class="big"> يحاول الموقع في الخلفبة الوصول إلى بيانات حساسة مثل الصور وواتساب وجهات الاتصال لديك! اضغط على إلغاء فور</p> 
-     <p class="big"> هذا الموقع مزيف ويهدف إلى توعيتك حول مخاطر الروابط المشبوهة.</p>
+     <p class="big"> يحاول الموقع في الخلفية الوصول إلى بيانات حساسة مثل الصور وواتساب وجهات الاتصال لديك! اضغط على إلغاء فورا</p> 
+    <!--     <p class="big"> هذا الموقع مزيف ويهدف إلى توعيتك حول مخاطر الروابط المشبوهة.</p>
+-->
       <div class="modal-actions">
         <button id="toAwareness" class="btn danger">إلغاء</button>
       </div>
@@ -239,6 +240,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
   <div id="modal4" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-card info">
       <h2>رسالة توعوية</h2>
+      <p>هذا الموقع مزيف ويهدف إلى توعيتك حول مخاطر الروابط المشبوهة</p>
       <p>هذه محاكاة توعوية لتوضيح مخاطر الروابط المشبوهة.</p>
       <ul>
         <li>لا تدخل بياناتك في مواقع مجهولة.</li>
