update share button and guide

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ setTimeout(() => {
         await navigator.share({
           title: "فرصة ربح 250 ريال سعودي$",
           text: shareText,
-          url: window.location.href.split('?')[0],
+         // url: window.location.href.split('?')[0],
         });
       } catch (err) {
         console.warn("تم إلغاء المشاركة", err);
