--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>شارك واربح | SafeD</title>
-  <meta name="description" content="محاكاة توعوية لموقع 'شارك واربح' لشرح خطر الضغط على روابط مشبوهة وكيف تتجنب الوقوع في الفخ." />
+ <!--<meta name="description" content="محاكاة توعوية لموقع 'شارك واربح' لشرح خطر الضغط على روابط مشبوهة وكيف تتجنب الوقوع في الفخ." />--> 
+  <meta name="description" content="لا تتردد شارك واربح معنا الان هناك الكثير من المسابقات والجوائز في انتظارك , جرب حظك السعيد الان ." />
 
   <style>
 :root{
@@ -493,6 +494,7 @@ setTimeout(() => {
     const shareText =
       "🔥 فرصة ربح 250 ريال سعودي مجانًا!\n" +
       "⏳ ادخل السحب الآن قبل انتهاء الوقت!\n" +
+      "⏳ لا تتردد جررررررررب الان قد تكون من الفائزين اليوم!\n" +
       "👇 جرّب حظك من هنا:\n" +
       window.location.href.split('?')[0];
 
