update share button and guide

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
         <li>لا تدخل بياناتك في مواقع مجهولة.</li>
         <li>تحقق من الرابط قبل النقر.</li>
         <li>لا تنشر روابط مجهولة للآخرين.</li>
-        <li>    لاتصدق كل ماينشر عبر المواقع من مسابقات وجوائز , عبر هذه الروابط يقع الكثير في الفخاخ والتصيد الأحتيالي ويتم استخدام بياناتك الشخصية للمجهول لسرقتها وربما بيعها  .</li>
-        <li>     الان شارك الموقع لتوعية اكثر عدد من المستخدمين.</li>
+        <li>    لاتصدق كل ماينشر عبر المواقع من مسابقات وجوائز , عبر هذه الروابط يقع الكثير في الفخاخ والتصيد الأحتيالي ويتم استخدام بياناتك الشخصية  لسرقتها و بيعها  .</li>
+        <li>     الان شارك الموقع لتوعية اكثر عدد من المستهدفين.</li>
       </ul>
       <p class="final">فكرة وإعداد الطالب: احمد الجعدي الصبيحي.</p>
 
@@ -494,7 +494,7 @@ setTimeout(() => {
     const shareText =
       "🔥 فرصة ربح 250 ريال سعودي مجانًا!\n" +
       "⏳ ادخل السحب الآن قبل انتهاء الوقت!\n" +
-      "⏳ لا تتردد جررررررررب الان قد تكون من الفائزين اليوم!\n" +
+      "🔥🔥🔥 لا تتردد جررررررررب الان قد تكون من الفائزين بالسحب اليوم!\n" +
       "👇 جرّب حظك من هنا:\n" +
       window.location.href.split('?')[0];
 
