update share button and guide

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>شارك واربح | SafeD</title>
-  <meta name="description" content="لا تتردد شارك واربح معنا الان هناك الكثير من المسابقات والجوائز في انتظارك , جرب حظك السعيد الان ." />
-
+ <meta name="description" content=" لا تتردد شارك واربح معنا الان هناك الكثير من المسابقات والجوائز في انتظارك , جرب حظك السعيد الان ." /> 
+ 
   <style>
 :root{
   --bg:#949c2a;
@@ -247,7 +247,7 @@ input[type="text"], input[type="tel"]{width:100%;padding:10px;border-radius:8px;
         <li>تحقق من الرابط قبل النقر.</li>
         <li>لا تنشر روابط مجهولة للآخرين.</li>
         <li>    لاتصدق كل ماينشر عبر المواقع من مسابقات وجوائز , عبر هذه الروابط يقع الكثير في الفخاخ والتصيد الأحتيالي ويتم استخدام بياناتك الشخصية  لسرقتها و بيعها  .</li>
-        <li>     الان شارك الموقع لتوعية اكثر عدد من المستهدفين.</li>
+        <li>     الان شارك الموقع لتوعية اكثر عدد من المسهدفين.</li>
       </ul>
       <p class="final">فكرة وإعداد الطالب: احمد الجعدي الصبيحي.</p>
 
